--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div id="cover">
         <div id="cover-text">
             <p>The Wedding of</p>
-            <h1>Heeseung<br>&<br>Amel</h1><br>
+            <h1>Heeseung<br>&<br>Minji</h1><br>
             <p>Minggu, 31 Desember 2024</p><br><br><br>
             <p>Kepada Yth.</p><br>
-            <h3><u>Nabila & Partner</u></h3>
+            <h3><u>Hanni & Partner</u></h3>
             <p>di Tempat</p><br><br>
             <button class="btn" onclick="openInvitation(), putarMusik()">Open Invitation</button><br>
         </div>
@@ -81,7 +81,7 @@
                 <div id="profile-pria">
                     <div class="icon">
                         <img src="assets/images/icon-ig.png">
-                        <a href="https://www.instagram.com/enhypen?igsh=amk1dzduZTRhZXRu">@lee_heeseung</a><br><br>
+                        <a href="https://www.instagram.com/enhypen?igsh=amk1dzduZTRhZXRu">@lee.heeseung</a><br><br>
                     </div>
                     <img src="assets/images/foto-pria.png" class="foto-pria">
                     <img src="assets/images/elemen3.png" class="elemen-l-p">
@@ -98,16 +98,16 @@
                 <div id="profile-wanita">
                     <div class="icon">
                         <img src="assets/images/icon-ig.png">
-                        <a href="https://www.instagram.com/whoai.mel?igsh=NDB5ZGEzMGt5MGtq">@whoai.mel</a><br><br>
+                        <a href="https://www.instagram.com/newjeans_official?igsh=MTdnaGIyaWNyMnB5bw==">@kim.minji</a><br><br>
                     </div>
                     <img src="assets/images/foto-wanita.png" class="foto-wanita">
                     <img src="assets/images/elemen3.png" class="elemen-l-w">
                     <img src="assets/images/elemen4.png" class="elemen-r-w">
                     <br><br><br>
                     <div class="profile-text">
-                        <h1>Amelia Putri</h1><br>
+                        <h1>Kim Minji</h1><br>
                         <center><hr width="250px" color="black"></center><br>
-                        <p>Putri keempat dari<br>Bapak Moh. Ilyas dan<br>Ibu Susanah</p><br>
+                        <p>Putri keempat dari<br>Bapak Jaehyun dan<br>Ibu Rose</p><br>
                         <center><hr width="250px" color="black"></center><br>
                     </div>
                 </div>
@@ -150,7 +150,6 @@
 
         <!--------- GALERI ---------->
         <section id="galeri" class="box-full4">
-            <img src="assets/images/elemen6.png" class="elemen-galeri-r">
             <img src="assets/images/elemen6.png" class="elemen-galeri-l">
             <h2>Momen yang<br>Berharga</h2>
             <p>Cinta adalah satu-satunya kebebasan di dunia karena ia begitu tinggi mengangkat jiwa,<br> 
